--- a/authentication/authentication-service/pom.xml
+++ b/authentication/authentication-service/pom.xml
@@ -77,6 +77,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring.boot.version}</version>
+            <exclusions>
+            	<exclusion>
+            		<groupId>com.fasterxml.jackson.core</groupId>
+            		<artifactId>jackson-databind</artifactId>
+            	</exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -105,11 +111,23 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
             <version>${spring-cloud-config.version}</version>
+            <exclusions>
+            	<exclusion>
+            		<groupId>com.fasterxml.jackson.core</groupId>
+            		<artifactId>jackson-databind</artifactId>
+            	</exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>${spring.boot.version}</version>
+            <exclusions>
+            	<exclusion>
+            		<groupId>com.fasterxml.jackson.core</groupId>
+            		<artifactId>jackson-databind</artifactId>
+            	</exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
@@ -125,6 +143,62 @@
             <groupId>io.mosip.kernel</groupId>
             <artifactId>kernel-websubclient-api</artifactId>
             <version>${kernel-websubclient-api.version}</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.springdoc</groupId>
+        	<artifactId>springdoc-openapi-ui</artifactId>
+        	<version>${springdoc.version}</version>
+        	<exclusions>
+        		<exclusion>
+        			<groupId>com.fasterxml.jackson.core</groupId>
+        			<artifactId>jackson-databind</artifactId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
+        <dependency>
+        	<groupId>io.mosip.kernel</groupId>
+        	<artifactId>kernel-core</artifactId>
+        	<version>${kernel-core.version}</version>
+        	<exclusions>
+        		<exclusion>
+        			<groupId>org.springframework.boot</groupId>
+        			<artifactId>
+        				spring-boot-starter-security
+        			</artifactId>
+        		</exclusion>
+        		<exclusion>
+        			<groupId>com.fasterxml.jackson.core</groupId>
+        			<artifactId>jackson-databind</artifactId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-webflux</artifactId>
+        	<version>${spring.boot.version}</version>
+        	<exclusions>
+        		<exclusion>
+        			<groupId>com.fasterxml.jackson.core</groupId>
+        			<artifactId>jackson-databind</artifactId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
+        <dependency>
+        	<groupId>io.mosip.kernel</groupId>
+        	<artifactId>kernel-logger-logback</artifactId>
+        	<version>${kernel-logger-logback.version}</version>
+        	<exclusions>
+        		<exclusion>
+        			<groupId>org.springframework.boot</groupId>
+        			<artifactId>
+        				spring-boot-starter-security
+        			</artifactId>
+        		</exclusion>
+        		<exclusion>
+        			<groupId>com.fasterxml.jackson.core</groupId>
+        			<artifactId>jackson-databind</artifactId>
+        		</exclusion>
+        	</exclusions>
         </dependency>
     </dependencies>
     <build>
