Updated test class

--- a/authentication/authentication-common/src/test/resources/application.properties
+++ b/authentication/authentication-common/src/test/resources/application.properties
@@ -401,4 +401,4 @@ mosip.mandatory-languages=eng
 mosip.optional-languages=ara,fra,fre
 mosip.default.template-languages=eng,ara,fre,fra
 
-ida.id.attribute.separator.fullAddress=:
+ida.id.attribute.separator.fullAddress=,
