--- a/authentication/authentication-common/src/test/resources/application.properties
+++ b/authentication/authentication-common/src/test/resources/application.properties
@@ -400,3 +400,5 @@ mosip.ida.credential.biometric.attribute.name=individualBiometrics
 mosip.mandatory-languages=eng
 mosip.optional-languages=ara,fra,fre
 mosip.default.template-languages=eng,ara,fre,fra
+
+ida.id.attribute.separator.fullAddress=,
