MOSIP-18407-fixed-kyc-attributes-fetch-logic

--- a/authentication/authentication-service/src/test/resources/application.properties
+++ b/authentication/authentication-service/src/test/resources/application.properties
@@ -619,3 +619,6 @@ openapi.group.paths[0]=/**
 ida-websub-masterdata-templates-callback-relative-url=
 ida-websub-masterdata-titles-callback-relative-url=
 ida-websub-ca-cert-callback-relative-url=
+
+ida.id.attribute.separator.fullAddress=,
+mosip.date-of-birth.pattern=yyyy/MM/dd
