MOSIP-15286 Fixed openapi.json failures for auth service.

--- a/authentication/authentication-internal-service/src/test/resources/application.properties
+++ b/authentication/authentication-internal-service/src/test/resources/application.properties
@@ -807,3 +807,10 @@ ida-websub-partner-service-policy-updated-callback-relative-url=${server.servlet
 ida-websub-partner-service-partner-api-key-updated-callback-relative-url=${server.servlet.context-path}/callback/partnermanagement/partner_api_key_updated
 ida-websub-partner-service-misp-license-generated-callback-relative-url=${server.servlet.context-path}/callback/partnermanagement/misp_license_generated
 ida-websub-partner-service-misp-license-updated-callback-relative-url=${server.servlet.context-path}/callback/partnermanagement/misp_license_updated
+
+# Limit the number of async threads created in IDRepo services. This count is divided into 4 thread groups configured in IdRepoConfig.class
+mosip.ida.active-async-thread-count=100
+
+# Logging of thread queue done based on below value in ms. Logging is done only if queue value of any one thread group crosses below specified threshold.
+mosip.ida.monitor-thread-queue-in-ms=600000
+mosip.ida.max-thread-queue-threshold=100
