--- a/authentication/authentication-otp-service/src/test/resources/application.properties
+++ b/authentication/authentication-otp-service/src/test/resources/application.properties
@@ -731,3 +731,10 @@ mosip.service.exclude.auth.allowed.method=GET,POST
 ida-websub-masterdata-templates-callback-relative-url=
 ida-websub-masterdata-titles-callback-relative-url=
 ida-websub-ca-cert-callback-relative-url=
+
+# Limit the number of async threads created in IDRepo services. This count is divided into 4 thread groups configured in IdRepoConfig.class
+mosip.ida.active-async-thread-count=100
+
+# Logging of thread queue done based on below value in ms. Logging is done only if queue value of any one thread group crosses below specified threshold.
+mosip.ida.monitor-thread-queue-in-ms=600000
+mosip.ida.max-thread-queue-threshold=100
