--- a/authentication/authentication-otp-service/pom.xml
+++ b/authentication/authentication-otp-service/pom.xml
@@ -153,22 +153,22 @@
 				<dependency>
 					<groupId>io.mosip.kernel</groupId>
 					<artifactId>kernel-auth-adapter</artifactId>
-					<version>1.2.0-SNAPSHOT</version>
+					<version>1.2.0-rc2-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>io.mosip.authentication</groupId>
 					<artifactId>authentication-childauthfilter-impl</artifactId>
-					<version>1.2.0-SNAPSHOT</version>
+					<version>1.2.0-rc2-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>io.mosip.biosdk</groupId>
 					<artifactId>biosdk-client</artifactId>
-					<version>1.2.0-SNAPSHOT</version>
+					<version>1.2.0-rc2-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>io.mosip.demosdk</groupId>
 					<artifactId>demosdk-client</artifactId>
-					<version>1.2.0-SNAPSHOT</version>
+					<version>1.2.0-rc2-SNAPSHOT</version>
 				</dependency>
 			</dependencies>
 			<build>
