--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -267,6 +267,7 @@
 				</executions>
 				<configuration>
 					<doclint>none</doclint>
+					<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
 				</configuration>
 			</plugin>
 			<plugin>
