--- a/authentication/authentication-hotlistfilter-impl/pom.xml
+++ b/authentication/authentication-hotlistfilter-impl/pom.xml
@@ -4,9 +4,9 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.2.0-rc2-SNAPSHOT</version>
+		<version>1.2.0-prerel</version>
 	</parent>
-	<version>1.2.0-rc2-SNAPSHOT</version>
+	<version>1.2.0-prerel</version>
 	<artifactId>authentication-hotlistfilter-impl</artifactId>
 	<name>authentication-hotlistfilter-impl</name>
 	<description>ID Authentication Filter Implementation for Hotlist validation</description>
