[DSD-1039] commented out slack notifications from push_trigger.yml.

--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -125,13 +125,13 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         GPG_TTY: $(tty)
-    - uses: 8398a7/action-slack@v3
-      with:
-        status: ${{ job.status }}
-        fields: repo,message,commit,workflow,job # selectable (default: repo,message)
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEVOPS_WEBHOOK }} # required
-      if: failure() # Pick up events even if the job fails or is canceled.
+  # - uses: 8398a7/action-slack@v3
+    # with:
+    #   status: ${{ job.status }}
+    #   fields: repo,message,commit,workflow,job # selectable (default: repo,message)
+    # env:
+    #   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEVOPS_WEBHOOK }} # required
+    # if: failure() # Pick up events even if the job fails or is canceled.
 
   docker-authentication-otp-service:
     needs: build
