--- a/authentication/authentication-service/src/test/resources/application.properties
+++ b/authentication/authentication-service/src/test/resources/application.properties
@@ -284,3 +284,160 @@ mosip.id.validation.identity.email=^[\\w-\\+]+(\\.[\\w]+)*@[\\w-]+(\\.[\\w]+)*(\
 mosip.idtype.allowed=VID,UIN
 
 mosip.kernel.otp.default-length=6
+
+## CBEFF util
+# Cbeff URL where the files will be stored in git, change it accordingly in case of change of storage location.
+mosip.kernel.xsdstorage-uri=classpath:
+# Cbeff XSD file name in config server
+mosip.kernel.xsdfile=mosip-cbeff.xsd
+
+#--------------------------------TokenId generator---------------------------------------------------#
+mosip.kernel.tokenid.uin.salt=zHuDEAbmbxiUbUShgy6pwUhKh9DE0EZn9kQDKPPKbWscGajMwf
+mosip.kernel.tokenid.partnercode.salt=yS8w5Wb6vhIKdf1msi4LYTJks7mqkbmITk2O63Iq8h0bkRlD0d
+
+#-----------------------------TOKEN-ID Properties---------------------------------
+#length of the token id
+mosip.kernel.tokenid.length=36
+
+ida-auth-partner-id=mpartner-default-auth
+
+
+
+#----------------------- Crypto --------------------------------------------------
+#Crypto asymmetric algorithm name
+mosip.kernel.crypto.asymmetric-algorithm-name=RSA/ECB/OAEPWITHSHA-256ANDMGF1PADDING
+#Crypto symmetric algorithm name
+mosip.kernel.crypto.symmetric-algorithm-name=AES/GCM/PKCS5Padding
+#Keygenerator asymmetric algorithm name
+mosip.kernel.keygenerator.asymmetric-algorithm-name=RSA
+#Keygenerator symmetric algorithm name
+mosip.kernel.keygenerator.symmetric-algorithm-name=AES
+#Asymmetric algorithm key length
+mosip.kernel.keygenerator.asymmetric-key-length=2048
+#Symmetric algorithm key length
+mosip.kernel.keygenerator.symmetric-key-length=256
+#Keygenerator symmetric algorithm name
+mosip.kernel.keygenerator.symmetric-algorithm-name=AES
+# keygenerator asymmetric algorithm name
+mosip.kernel.keygenerator.asymmetric-algorithm-name=RSA
+#Encrypted data and encrypted symmetric key separator
+mosip.kernel.data-key-splitter=#KEY_SPLITTER#
+#GCM tag length
+mosip.kernel.crypto.gcm-tag-length=128
+#Hash algo name
+mosip.kernel.crypto.hash-algorithm-name=PBKDF2WithHmacSHA512
+#Symmtric key length used in hash
+mosip.kernel.crypto.hash-symmetric-key-length=256
+#No of iterations in hash
+mosip.kernel.crypto.hash-iteration=100000
+#Sign algo name
+mosip.kernel.crypto.sign-algorithm-name=RS256
+
+
+websub.base.url=http://localhost
+websub.hub.url=${websub.base.url}/hub
+websub.publish.url=${websub.base.url}/publish
+
+
+
+#-----Websub configurations------
+# Secret for auth type status update callback
+ida-websub-authtype-callback-secret=Kslk30SNF2AChs2
+# Secret for credtial issueance callback
+ida-websub-credential-issue-callback-secret=Kslk30SNF2AChs2
+# Secret for credtial issueance callback
+ida-websub-partner-service-callback-secret=Kslk30SNF2AChs2
+# Secret for partner CA certification upload callback
+ida-websub-ca-certificate-callback-secret=Kslk30SNF2AChs2
+# Secret for partner CA certification upload callback
+ida-websub-hotlist-callback-secret=Kslk30SNF2AChs2
+ida-websub-masterdata-templates-callback-secret=Kslk30SNF2AChs2
+ida-websub-masterdata-titles-callback-secret=Kslk30SNF2AChs2
+
+# for testing failed message
+application.base.url=${mosipbox.public.url}
+
+# Callback url for auth type status update event notification
+ida-websub-auth-type-callback-relative-url=${server.servlet.context-path}/callback/authTypeCallback/${ida-auth-partner-id}
+ida-websub-auth-type-callback-url=${application.base.url}${ida-websub-auth-type-callback-relative-url}
+# Callback url for credential issueance event notification, including id remove/deactivate/activate events
+ida-websub-credential-issue-callback-url=${application.base.url}${server.servlet.context-path}/callback/idchange/{eventType}/${ida-auth-partner-id}
+ida-websub-idchange-credential-issued-callback-relative-url=${server.servlet.context-path}/callback/idchange/credential_issued/${ida-auth-partner-id}
+ida-websub-idchange-remove-id-callback-relative-url=${server.servlet.context-path}/callback/idchange/remove_id/${ida-auth-partner-id}
+ida-websub-idchange-deactivate-id-callback-relative-url=${server.servlet.context-path}/callback/idchange/deactivate_id/${ida-auth-partner-id}
+ida-websub-idchange-activate-id-callback-relative-url=${server.servlet.context-path}/callback/idchange/activate_id/${ida-auth-partner-id}
+
+ida-websub-idchage-callback-url=${application.base.url}${server.servlet.context-path}/callback/idchange/{eventType}/${ida-auth-partner-id}
+ida-websub-ca-cert-callback-url=${application.base.url}${server.servlet.context-path}/callback/partnermanagement/ca_certificate
+#Auth Adaptor
+#List of keycloack clients allowed to invoke IDA internal APIs
+auth.server.admin.allowed.audience=mosip-resident-client,mosip-regproc-client,mosip-admin-client,mosip-reg-client,mosip-ida-client
+
+
+
+# Callback url for MISP/Partner change notification events
+ida-websub-partner-service-callback-url=${application.base.url}${server.servlet.context-path}/callback/partnermanagement/{eventType}
+ida-websub-partner-service-apikey-approved-callback-relative-url=${server.servlet.context-path}/callback/partnermanagement/apikey_approved
+ida-websub-partner-service-partner-updated-callback-relative-url=${server.servlet.context-path}/callback/partnermanagement/partner_updated
+ida-websub-partner-service-policy-updated-callback-relative-url=${server.servlet.context-path}/callback/partnermanagement/policy_updated
+ida-websub-partner-service-partner-api-key-updated-callback-relative-url=${server.servlet.context-path}/callback/partnermanagement/partner_api_key_updated
+ida-websub-partner-service-misp-license-generated-callback-relative-url=${server.servlet.context-path}/callback/partnermanagement/misp_license_generated
+ida-websub-partner-service-misp-license-updated-callback-relative-url=${server.servlet.context-path}/callback/partnermanagement/misp_license_updated
+# Callback url for hotlist event
+ida-websub-hotlist-callback-relative-url=${server.servlet.context-path}/callback/hotlist
+ida-websub-hotlist-callback-url=${application.base.url}${ida-websub-hotlist-callback-relative-url}
+
+#Delay (in milliseconds) for subscription on application startup to avoid failure during intent verification by hub.
+subscriptions-delay-on-startup_millisecs=1000
+#Delay (in milliseconds) after initial topic subscriptions (after subscriptions-delay-on-startup_millisecs) to invoke retriggering of missing credential issuances.
+delay-to-pull-missing-credential-after-topic-subscription_millisecs=1000
+
+# The time interval in seconds to schedule subscription of topics which is done as a
+# work-around for the bug: MOSIP-9496. By default the
+# this property value is set to 0 that disables this workaround.
+# To enable the resubscrition scheduling, this property should be assigned with a positive
+# number like 1 * 60 * 60 = 3600 for one hour
+ida-websub-resubscription-delay-secs=1000
+
+#------ Web sub Event Topis used in IDA  ---
+# Topic for Auth Type Status Update Event
+ida-topic-auth-type-status-updated=${ida-auth-partner-id}/AUTH_TYPE_STATUS_UPDATE
+# Topic for Credential Issueance Event (for UIN/VID create/update events)
+ida-topic-credential-issued=${ida-auth-partner-id}/CREDENTIAL_ISSUED
+# Topic for ID Remove Event (UIN blocked / VID revoked events)
+ida-topic-remove-id=${ida-auth-partner-id}/REMOVE_ID
+# Topic for ID Deactivate Event (UIN/VID deactivate events) 
+ida-topic-deactivate-id=${ida-auth-partner-id}/DEACTIVATE_ID
+# Topic for ID Activate Event (UIN/VID activate events) 
+ida-topic-activate-id=${ida-auth-partner-id}/ACTIVATE_ID
+# Topic for Fraud analysis Event
+ida-topic-fraud-analysis=IDA_FRAUD_ANALYTICS
+
+# Topic for MISP license generated event
+ida-topic-pmp-misp-license-generated=MISP_LICENSE_GENERATED
+# Topic for MISP update event
+ida-topic-pmp-misp-updated=MISP_UPDATED
+ida-topic-pmp-misp-license-updated=MISP_LICENSE_UPDATED
+# Topic for API key approved event
+ida-topic-pmp-partner-api-key-approved=APIKEY_APPROVED
+# Topic for Partner update event
+ida-topic-pmp-partner-updated=PARTNER_UPDATED
+# Topic for Partner API Key update event
+ida-topic-pmp-partner-api-key-updated=APIKEY_UPDATED
+# Topic for Policy update event
+ida-topic-pmp-policy-updated=POLICY_UPDATED
+# Topic for Partner CA Certificate Upload event
+ida-topic-pmp-ca-certificate-uploaded=CA_CERTIFICATE_UPLOADED
+
+# Topic for Hotlisting event
+ida-topic-hotlist=MOSIP_HOTLIST
+ida-topic-credential-status-update=CREDENTIAL_STATUS_UPDATE
+ida-topic-auth-type-status-update-acknowledge=AUTH_TYPE_STATUS_UPDATE_ACK
+ida-topic-auth-transaction-status=AUTHENTICATION_TRANSACTION_STATUS
+ida-topic-auth-anonymous-profile=ANONYMOUS_PROFILE
+
+ida-topic-masterdata-templates=MASTERDATA_IDAUTHENTICATION_TEMPLATES
+ida-topic-masterdata-titles=MASTERDATA_TITLES
+#-----------------------
+
+application.base.url=http://localhost
