--- a/authentication/authentication-authtypelockfilter-impl/pom.xml
+++ b/authentication/authentication-authtypelockfilter-impl/pom.xml
@@ -4,9 +4,9 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.2.0.1-B1</version>
+		<version>1.2.0.1-SNAPSHOT</version>
 	</parent>
-	<version>1.2.0.1-B1</version>
+	<version>1.2.0.1-SNAPSHOT</version>
 	<artifactId>authentication-authtypelockfilter-impl</artifactId>
 	<name>authentication-authtypelockfilter-impl</name>
 	<description>ID Authentication Filter Implementation for Auth Type Lock validation</description>
