--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>io.mosip.authentication</groupId>
 	<artifactId>authentication-parent</artifactId>
-	<version>1.2.0.1-B1</version>
+	<version>1.2.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>id-authentication</name>
