Changed base64 url safe to normal base64 for face image.

--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -108,6 +108,7 @@
 		<kernel-demoapi.version>${kernel.parent.version}</kernel-demoapi.version>
 		<kernel-idauthenticationfilter-api.version>${kernel.parent.version}</kernel-idauthenticationfilter-api.version>
 		<kernel-biometrics-util>${kernel.parent.version}</kernel-biometrics-util>
+		<kernel-openid-bridge-api.version>${kernel.parent.version}</kernel-openid-bridge-api.version>
 
 		<!-- Maven Plugins -->
 		<maven.compiler.source>11</maven.compiler.source>
@@ -244,6 +245,12 @@
 			<version>${spring.boot.version}</version>
 			<optional>true</optional>
 		</dependency>
+		<!-- <dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-openid-bridge-api</artifactId>
+			<version>${kernel-openid-bridge-api.version}</version>
+			<scope>provided</scope>
+		</dependency> -->
 	</dependencies>
 	<build>
 		<plugins>
