--- a/authentication/authentication-filter-api/pom.xml
+++ b/authentication/authentication-filter-api/pom.xml
@@ -4,9 +4,9 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.2.0.1-B2-SNAPSHOT</version>
+		<version>1.2.0.1-B2</version>
 	</parent>
-	<version>1.2.0.1-B2-SNAPSHOT</version>
+	<version>1.2.0.1-B2</version>
 	<artifactId>authentication-filter-api</artifactId>
 	<name>authentication-filter-api</name>
 	<description>ID Authentication Filter API</description>
