--- a/authentication/authentication-service/pom.xml
+++ b/authentication/authentication-service/pom.xml
@@ -205,6 +205,11 @@
             <artifactId>biometrics-util</artifactId>
             <version>${kernel-biometrics-util}</version>
         </dependency>
+        <dependency>
+			<groupId>org.openpnp</groupId>
+			<artifactId>opencv</artifactId>
+			<version>4.5.3-4</version>
+	    </dependency>
     </dependencies>
     <build>
         <plugins>
